src/objects/Expensa__c.object
<CustomObject>
    <fields>
        <fullName>Ano__c</fullName>
        <label>Año</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fecha__c</fullName>
        <formula>DATE(VALUE(RIGHT(TEXT( Ano__c ),4)),VALUE(LEFT(TEXT(Mes__c),2)),01)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gastos_generales__c</fullName>
        <label>Gastos generales</label>
        <summarizedField>Expensa_gasto_general__c.Importe__c</summarizedField>
        <summaryForeignKey>Expensa_gasto_general__c.Expensa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mes__c</fullName>
        <label>Mes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Montos_pagados__c</fullName>
        <label>Montos pagados</label>
        <summarizedField>Expensa_unidad__c.Monto_pagado__c</summarizedField>
        <summaryForeignKey>Expensa_unidad__c.Expensa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Obra__c</fullName>
        <label>Obra</label>
        <referenceTo>Obra__c</referenceTo>
        <relationshipLabel>Expensas</relationshipLabel>
        <relationshipName>Exoensas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Saldo_a_pagar__c</fullName>
        <formula>Gastos_generales__c  -  Montos_pagados__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo a pagar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Expensa</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de Expensa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expensas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>